--- a/css/styles2.css
+++ b/css/styles2.css
@@ -46,6 +46,7 @@ h2 {
 
 .parrafo1 {
     font-size: 20px;
+    text-align: justify;
 }
 
 h1 {
@@ -59,6 +60,19 @@ h1 {
 }
 
 #cuadros {
-    background-color: rgba(67, 77, 82, 0.349);
+    background-color: rgba(65, 204, 31, 0.616);
     size: 15pt;
+}
+
+.frase {
+    text-align: center;
+    font-family: Georgia;
+    margin-left: 200px;
+    margin-bottom: 60px;
+    font-size: 30pt;
+}
+
+.carousel-inner {
+    width: 100%;
+    height: auto;
 }
