--- a/css/styles2.css
+++ b/css/styles2.css
@@ -53,7 +53,7 @@ h1 {
     text-align: center;
     background-color: rgba(65, 204, 31, 0.616);
     font-family: Times;
-    font-size: 100pt;
+    font-size: 100px;
     font-weight: 500;;
     margin-top: 40px;
     margin-left: 40px;
@@ -69,10 +69,14 @@ h1 {
     font-family: Georgia;
     margin-left: 200px;
     margin-bottom: 60px;
-    font-size: 30pt;
+    font-size: 30px;
 }
 
 .carousel-inner {
     width: 100%;
     height: auto;
+}
+
+h5 {
+    font-size: 30px;
 }
